nginx-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    team: micros
    version: 1.2.4
    environment: production
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
